unpackaged/main/default/objects/Opportunity/fields/Focused_Category__c.field-meta.xml
<CustomField>
    <fullName>Focused_Category__c</fullName>
    <label>Focused Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SBU__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECN</fullName>
            </value>
            <value>
                <fullName>PVC Fittings</fullName>
            </value>
            <value>
                <fullName>Conduit &amp; Cable Fittings (Konkore)</fullName>
            </value>
            <value>
                <fullName>Metal Framing Fittings</fullName>
            </value>
            <value>
                <fullName>Cable Tray</fullName>
            </value>
            <value>
                <fullName>Wire Basket</fullName>
            </value>
            <value>
                <fullName>Liquidtight Conduit</fullName>
            </value>
            <value>
                <fullName>Modular Power (ACS)</fullName>
            </value>
            <value>
                <fullName>Prefab Assemblies (ACS)</fullName>
            </value>
            <value>
                <fullName>Aluminum Conduit &amp; Fittings</fullName>
            </value>
            <value>
                <fullName>PVC-Coated Conduit &amp; Fittings</fullName>
            </value>
            <value>
                <fullName>Stainless Conduit &amp; Fittings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>