unpackaged/main/default/objects/Opportunity/fields/FY_EBITDA__c.field-meta.xml
<CustomField>
    <fullName>FY_EBITDA__c</fullName>
    <label>FY EBITDA $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>