unpackaged/main/default/objects/Opportunity/fields/FY_EBITDA_percentage__c.field-meta.xml
<CustomField>
    <fullName>FY_EBITDA_percentage__c</fullName>
    <label>FY EBITDA %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>