unpackaged/main/default/objects/Opportunity/fields/FY_Revenue__c.field-meta.xml
<CustomField>
    <fullName>FY_Revenue__c</fullName>
    <label>FY Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>