unpackaged/main/default/objects/Opportunity/fields/HangerNumber__c.field-meta.xml
<CustomField>
    <fullName>HangerNumber__c</fullName>
    <description>Used in the Hanger Configurator integration.</description>
    <inlineHelpText>Used in the Hanger Configurator integration.</inlineHelpText>
    <label>HangerNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>