unpackaged/main/default/objects/Opportunity/fields/Ignore_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Validation Rules</label>
    <type>Checkbox</type>
</CustomField>