unpackaged/main/default/objects/Opportunity/fields/Indirect_Customer__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Indirect Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>OpportunitiesToIndirectCustomer</relationshipName>
    <type>Lookup</type>
</CustomField>