unpackaged/main/default/objects/Opportunity/fields/Infor_XA_Customer__c.field-meta.xml
<CustomField>
    <fullName>Infor_XA_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Infor XA Customer</label>
    <referenceTo>CommercientSF18__CUSMAS__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>