unpackaged/main/default/objects/Opportunity/fields/Infor_XA_Ship_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Infor_XA_Ship_To_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Infor XA Ship To Address</label>
    <referenceTo>CommercientSF18__MBS2REP__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>