unpackaged/main/default/objects/Opportunity/fields/Integration_Source__c.field-meta.xml
<CustomField>
    <fullName>Integration_Source__c</fullName>
    <description>Used for records inserted by integrations such as the Revit Toolbar and Hanger Configurator.</description>
    <inlineHelpText>Used for records inserted by integrations such as the Revit Toolbar and Hanger Configurator.</inlineHelpText>
    <label>Integration Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Hanger Configurator</fullName>
            </value>
            <value>
                <fullName>Revit Toolbar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>