unpackaged/main/default/objects/Opportunity/fields/Key_Products_Groups__c.field-meta.xml
<CustomField>
    <fullName>Key_Products_Groups__c</fullName>
    <label>Key Product Groups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Bollards - High Security – shallow</fullName>
            </value>
            <value>
                <fullName>Bollards – High Security - other</fullName>
            </value>
            <value>
                <fullName>Bollards – Safety/Storefront</fullName>
            </value>
            <value>
                <fullName>Bollards – Retractable</fullName>
            </value>
            <value>
                <fullName>Bollards – Other</fullName>
            </value>
            <value>
                <fullName>Hostile Vehicle Mitigation – Other</fullName>
            </value>
            <value>
                <fullName>Razor – Coils</fullName>
            </value>
            <value>
                <fullName>Razor – Panels</fullName>
            </value>
            <value>
                <fullName>Razor – Other (cage, instabox, etc)</fullName>
            </value>
            <value>
                <fullName>RDU – traditional</fullName>
            </value>
            <value>
                <fullName>RDU – barbless</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>