unpackaged/main/default/objects/Opportunity/fields/Lost_Details__c.field-meta.xml
<CustomField>
    <fullName>Lost_Details__c</fullName>
    <description>Details of how/why Oppty was lost</description>
    <inlineHelpText>Please enter relevant details / competitive feedback.</inlineHelpText>
    <label>Lost Details</label>
    <type>TextArea</type>
</CustomField>