unpackaged/main/default/objects/Opportunity/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Availability/Lead Time</fullName>
            </value>
            <value>
                <fullName>Codes &amp; Standards</fullName>
                <isActive>false</isActive>
                <label>Codes &amp; Standards</label>
            </value>
            <value>
                <fullName>Competitor</fullName>
                <isActive>false</isActive>
                <label>Competitor</label>
            </value>
            <value>
                <fullName>Credit App</fullName>
                <isActive>false</isActive>
                <label>Credit App</label>
            </value>
            <value>
                <fullName>Customer Abandoned</fullName>
            </value>
            <value>
                <fullName>Data Clean Up</fullName>
                <isActive>false</isActive>
                <label>Data Clean Up</label>
            </value>
            <value>
                <fullName>Declined to Bid</fullName>
                <isActive>false</isActive>
                <label>Declined to Bid</label>
            </value>
            <value>
                <fullName>Different Distributor</fullName>
                <isActive>false</isActive>
                <label>Different Distributor</label>
            </value>
            <value>
                <fullName>Lead Time</fullName>
                <label>Lead Time/Product Delivery</label>
            </value>
            <value>
                <fullName>Mill Min Req</fullName>
                <isActive>false</isActive>
                <label>Mill Min Req</label>
            </value>
            <value>
                <fullName>Mill Prod</fullName>
                <isActive>false</isActive>
                <label>Mill Prod</label>
            </value>
            <value>
                <fullName>No Mill Capacity</fullName>
                <isActive>false</isActive>
                <label>No Mill Capacity</label>
            </value>
            <value>
                <fullName>Normal Mill Lead Time</fullName>
                <isActive>false</isActive>
                <label>Normal Mill Lead Time</label>
            </value>
            <value>
                <fullName>No Steel</fullName>
                <isActive>false</isActive>
                <label>No Steel</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Product Delivery</fullName>
                <isActive>false</isActive>
                <label>Product Delivery</label>
            </value>
            <value>
                <fullName>Product does not meet spec.</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
                <isActive>false</isActive>
                <label>Quality</label>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Rolling Pushed Out</fullName>
                <isActive>false</isActive>
                <label>Rolling Pushed Out</label>
            </value>
            <value>
                <fullName>Specifications</fullName>
                <isActive>false</isActive>
                <label>Specifications</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>