unpackaged/main/default/objects/Opportunity/fields/Lost_To__c.field-meta.xml
<CustomField>
    <fullName>Lost_To__c</fullName>
    <description>Select the Competitor who won the Opportunity</description>
    <inlineHelpText>Select the name of the competitor to whom Atkore lost this Opportunity</inlineHelpText>
    <label>Lost To</label>
    <length>55</length>
    <type>Text</type>
</CustomField>