unpackaged/main/default/objects/Opportunity/fields/LTM_EBITDA__c.field-meta.xml
<CustomField>
    <fullName>LTM_EBITDA__c</fullName>
    <label>LTM EBITDA $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>