unpackaged/main/default/objects/Opportunity/fields/LTM_EBITDA_percentage__c.field-meta.xml
<CustomField>
    <fullName>LTM_EBITDA_percentage__c</fullName>
    <label>LTM EBITDA %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>