unpackaged/main/default/objects/Opportunity/fields/LTM_Revenue__c.field-meta.xml
<CustomField>
    <fullName>LTM_Revenue__c</fullName>
    <label>LTM Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>