unpackaged/main/default/objects/Opportunity/fields/Management_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Management_Meeting__c</fullName>
    <label>Management Meeting</label>
    <type>Date</type>
</CustomField>