unpackaged/main/default/objects/Opportunity/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>Please select the Market that this Opportunity is in</description>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Center</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Power &amp; Utility</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Institutional</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Food and Beverage</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
                <isActive>false</isActive>
                <label>Government</label>
            </value>
            <value>
                <fullName>Hotel</fullName>
                <isActive>false</isActive>
                <label>Hotel</label>
            </value>
            <value>
                <fullName>I Don&#39;t Know</fullName>
                <isActive>false</isActive>
                <label>I Don&#39;t Know</label>
            </value>
            <value>
                <fullName>Solar</fullName>
                <isActive>false</isActive>
                <label>Solar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>