unpackaged/main/default/objects/Opportunity/fields/Maximum_Debt_Multiple__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Debt_Multiple__c</fullName>
    <label>Maximum Debt Multiple</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>