unpackaged/main/default/objects/Opportunity/fields/Maximum_IRR__c.field-meta.xml
<CustomField>
    <fullName>Maximum_IRR__c</fullName>
    <label>Maximum IRR</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>