unpackaged/main/default/objects/Opportunity/fields/MC_Luminary_HCF__c.field-meta.xml
<CustomField>
    <fullName>MC_Luminary_HCF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MC Luminary HCF</label>
    <type>Checkbox</type>
</CustomField>