unpackaged/main/default/objects/Opportunity/fields/MC_Luminary_Multizone__c.field-meta.xml
<CustomField>
    <fullName>MC_Luminary_Multizone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MC Luminary Multizone</label>
    <type>Checkbox</type>
</CustomField>