unpackaged/main/default/objects/Opportunity/fields/Mechanical_Funnel__c.field-meta.xml
<CustomField>
    <fullName>Mechanical_Funnel__c</fullName>
    <label>Funnel Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Flexicon</fullName>
            </value>
            <value>
                <fullName>MASSH-400</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Mechanical - Value Add</fullName>
            </value>
            <value>
                <fullName>Saflector</fullName>
            </value>
            <value>
                <fullName>Tectron</fullName>
            </value>
            <value>
                <fullName>Tectron - Value Add</fullName>
            </value>
            <value>
                <fullName>Traffic Safety</fullName>
                <label>Telespar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>