unpackaged/main/default/objects/Opportunity/fields/Mechanical_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Mechanical_Tracking__c</fullName>
    <inlineHelpText>Select tracking option</inlineHelpText>
    <label>Mechanical Tracking</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Tectron</fullName>
            </value>
            <value>
                <fullName>Value Add Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>