unpackaged/main/default/objects/Opportunity/fields/Metal_Framing_Cable_Mgt_Market__c.field-meta.xml
<CustomField>
    <fullName>Metal_Framing_Cable_Mgt_Market__c</fullName>
    <description>select market for opportunity</description>
    <inlineHelpText>select market for opportunity</inlineHelpText>
    <label>Metal Framing Cable Mgt Market</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>