unpackaged/main/default/objects/Opportunity/fields/Metal_Framing_Cable_Mgt_Pipeline_Type__c.field-meta.xml
<CustomField>
    <fullName>Metal_Framing_Cable_Mgt_Pipeline_Type__c</fullName>
    <description>Select appropriate Pipeline for tracking (Unistrut,Cope,PS)</description>
    <inlineHelpText>Select appropriate Pipeline for tracking (Unistrut, Cope, PS)</inlineHelpText>
    <label>Metal Framing Cable Mgt Pipeline Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>New Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>