unpackaged/main/default/objects/Opportunity/fields/MFCM_Account_Conversion__c.field-meta.xml
<CustomField>
    <fullName>MFCM_Account_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Metal Framing Cable Management strategic initiative for Account conversion.</description>
    <inlineHelpText>Metal Framing Cable Management strategic initiative for Account conversion.</inlineHelpText>
    <label>MFCM Account Conversion</label>
    <type>Checkbox</type>
</CustomField>