unpackaged/main/default/objects/Opportunity/fields/MFCM_Cope_Quick_Ship__c.field-meta.xml
<CustomField>
    <fullName>MFCM_Cope_Quick_Ship__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Metal Framing Cable Management strategic initiative for Cope Quick Ship.</description>
    <inlineHelpText>Metal Framing Cable Management strategic initiative for Cope Quick Ship.</inlineHelpText>
    <label>MFCM Cope Quick Ship</label>
    <type>Checkbox</type>
</CustomField>