unpackaged/main/default/objects/Opportunity/fields/MFCM_Cope_Wire_Basket__c.field-meta.xml
<CustomField>
    <fullName>MFCM_Cope_Wire_Basket__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Metal Framing Cable Management strategic initiative for Cope Wire Basket products.</description>
    <inlineHelpText>Metal Framing Cable Management strategic initiative for Cope Wire Basket products.</inlineHelpText>
    <label>MFCM Cope Wire Basket</label>
    <type>Checkbox</type>
</CustomField>