unpackaged/main/default/objects/Opportunity/fields/MFCM_Defender__c.field-meta.xml
<CustomField>
    <fullName>MFCM_Defender__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Metal Framing Cable Management strategic initiative for Defender Products</description>
    <inlineHelpText>Metal Framing Cable Management strategic initiative for Defender Products</inlineHelpText>
    <label>MFCM Defender</label>
    <type>Checkbox</type>
</CustomField>