unpackaged/main/default/objects/Opportunity/fields/Minimum_Debt_Multiple__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Debt_Multiple__c</fullName>
    <label>Minimum Debt Multiple</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>