unpackaged/main/default/objects/Opportunity/fields/Minimum_IRR__c.field-meta.xml
<CustomField>
    <fullName>Minimum_IRR__c</fullName>
    <label>Minimum IRR</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>