unpackaged/main/default/objects/Opportunity/fields/New_Product__c.field-meta.xml
<CustomField>
    <fullName>New_Product__c</fullName>
    <label>New Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>10 AWG Modular System (ACS)</fullName>
            </value>
            <value>
                <fullName>20C 3in Profile (Cope)</fullName>
            </value>
            <value>
                <fullName>Universal Super Coupling</fullName>
                <label>3- &amp; 5-Piece Compression Couplings &amp; Connectors (Konkore)</label>
            </value>
            <value>
                <fullName>5in Glas Tray (Cope)</fullName>
            </value>
            <value>
                <fullName>Armored PLFA (AFC)</fullName>
            </value>
            <value>
                <fullName>Brite Rail</fullName>
            </value>
            <value>
                <fullName>Power-Strut Defender</fullName>
                <label>Defender Channel (Powerstrut)</label>
            </value>
            <value>
                <fullName>Defender Fittings (Powerstrut)</fullName>
            </value>
            <value>
                <fullName>Device Assemblies (ACS)</fullName>
            </value>
            <value>
                <fullName>Flexicon (AFC)</fullName>
            </value>
            <value>
                <fullName>Gaylords (AFC)</fullName>
            </value>
            <value>
                <fullName>MC Luminary Multizone</fullName>
                <label>HCF, Multizone, Quik Luminary Cables (AFC)</label>
            </value>
            <value>
                <fullName>KoreFit Fittings (Metal Framing)</fullName>
            </value>
            <value>
                <fullName>Luminary Whips</fullName>
                <label>Luminary Whips (AFC)</label>
            </value>
            <value>
                <fullName>MC Quik Lite Plain (AFC)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Pack &amp; Roll (AFC)</fullName>
            </value>
            <value>
                <fullName>Performance Flex (AFC)</fullName>
            </value>
            <value>
                <fullName>Quick-Latch for WB (Cope)</fullName>
            </value>
            <value>
                <fullName>Quick Lock Connector With Double Bite Clip (Konkore)</fullName>
            </value>
            <value>
                <fullName>Screw On Liquid Tight Fittings (Konkore)</fullName>
            </value>
            <value>
                <fullName>Super Kwik Couple Conduit</fullName>
                <label>Super Kwik Couple Conduit (Allied)</label>
            </value>
            <value>
                <fullName>Telespar MASSH-400</fullName>
                <isActive>false</isActive>
                <label>Telespar MASSH-400</label>
            </value>
            <value>
                <fullName>WB EMT Clip (Cope)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>