unpackaged/main/default/objects/Opportunity/fields/New_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>New_Product_Category__c</fullName>
    <label>New Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Konkore Fittings</fullName>
            </value>
            <value>
                <fullName>ECN</fullName>
            </value>
            <value>
                <fullName>PVC Fittings</fullName>
            </value>
            <value>
                <fullName>Wire Basket</fullName>
                <label>Cable Tray/Wire Basket</label>
            </value>
            <value>
                <fullName>Metal Framing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>