unpackaged/main/default/objects/Opportunity/fields/Non_Disclosure_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Non_Disclosure_Agreement_Signed__c</fullName>
    <inlineHelpText>Once the NDA is signed, it must be uploaded to the Opportunity. (In the Notes &amp; Attachments section.)</inlineHelpText>
    <label>Non-Disclosure Agreement Signed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>