unpackaged/main/default/objects/Opportunity/fields/Number_of_Active_Engineering_Requests__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Active_Engineering_Requests__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Active Engineering Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>