unpackaged/main/default/objects/Opportunity/fields/Number_of_Approved_Quotes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Approved_Quotes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Approved Quotes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>