unpackaged/main/default/objects/Opportunity/fields/Opportunity_Name_Dupecheck__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name_Dupecheck__c</fullName>
    <description>This field is used in workflow to verify that an opportunity name is not duplicated.</description>
    <inlineHelpText>This field is used in workflow to verify that an opportunity name is not duplicated.</inlineHelpText>
    <label>Opportunity Name Dupecheck</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>