unpackaged/main/default/objects/Opportunity/fields/Opportunity_Name_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name_Suffix__c</fullName>
    <formula>IF( AND(NOT( ISNULL( Related_Project__c )),NOT(ISNULL($User.Salesperson_Product_Category__c))), 
 $User.Salesperson_Product_Category__c +Related_Project__r.Name,&#39;NA&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Name Project Suffix</label>
    <type>Text</type>
</CustomField>