unpackaged/main/default/objects/Opportunity/fields/Opportunity_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Narrative__c</fullName>
    <label>Opportunity Narrative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>