unpackaged/main/default/objects/Opportunity/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <description>Opportunity Number set by the system when an opportunity is created.</description>
    <displayFormat>ATK-{000000000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>Opportunity Number set by the system when an opportunity is created.</inlineHelpText>
    <label>Opportunity Number</label>
    <type>AutoNumber</type>
</CustomField>