unpackaged/main/default/objects/Opportunity/fields/Opportunity_RT_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_RT_Developer_Name__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity RT Developer Name</label>
    <type>Text</type>
</CustomField>