unpackaged/main/default/objects/Opportunity/fields/Opportunity_Sub_Categories__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sub_Categories__c</fullName>
    <label>Opportunity Sub-Categories</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Potential Customer</fullName>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
            <value>
                <fullName>Third Party Sales</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>