unpackaged/main/default/objects/Opportunity/fields/Oppty_Lost__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Lost__c</fullName>
    <description>for use in reporting</description>
    <formula>IF(OR(ISPICKVAL(StageName, &quot;Closed Lost - Codes and Standards&quot;),
      ISPICKVAL(StageName, &quot;Closed Lost - Price&quot;),
      ISPICKVAL(StageName, &quot;Closed Lost - Product Delivery&quot;),
      ISPICKVAL(StageName, &quot;Closed Lost - Relationship&quot;),
      ISPICKVAL(StageName, &quot;Closed Lost - Specifications&quot;),
      ISPICKVAL(StageName, &quot;Closed Lost - Other&quot;),
      ISPICKVAL(StageName, &quot;Closed Lost - No Steel&quot;),
      ISPICKVAL(StageName, &quot;Closed Lost - Lead Time&quot;),
      ISPICKVAL(StageName, &quot;Closed Lost - Mill Min Req&quot;),
      ISPICKVAL(StageName, &quot;Closed Lost - Credit App&quot;),
      ISPICKVAL(StageName, &quot;Closed Lost - Mill Prod&quot;),
      ISPICKVAL(StageName, &quot;Closed Declined to Bid&quot;)), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oppty Lost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>