unpackaged/main/default/objects/Opportunity/fields/Oppty_Open__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Open__c</fullName>
    <description>for use in reporting</description>
    <formula>IF( OR(ISPICKVAL(StageName, &quot;Initial Needs Assessment&quot;),
       ISPICKVAL(StageName, &quot;Initial Estimate&quot;),
       ISPICKVAL(StageName, &quot;Refinement of Needs Assessment&quot;),
       ISPICKVAL(StageName, &quot;Quote&quot;),
       ISPICKVAL(StageName, &quot;Negotiate&quot;),
       ISPICKVAL(StageName, &quot;Submittal&quot;),
       ISPICKVAL(StageName, &quot;Re-Quote&quot;)), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oppty Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>